--- a/www/index.html
+++ b/www/index.html
@@ -8,14 +8,24 @@
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/colour.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <title></title>
+  <title>StudioRoom - Effortless Collaboration</title>
 </head>
 
 <body>
 
-  <header>
-    <nav>
+  <header class="masthead grid grid-middle">
+    <div class="unit xs-1 s-1 m-1-2 l-1-4 text-center island-1-2">
+      <h1 class="push-0 mega">CSS Modules</h1>
+    </div>
+    <nav class="unit xs-1 s-1 m-1-2 l-3-4 island-1-2">
+      <ul class="list-group list-group--inline push-0">
+        <li class="push-r"><a href="#">Home</a></li>
+        <li class="push-r"><a href="#">Tour</a></li>
+        <li class="push-r"><a href="#">Pricing</a></li>
+        <li class="push-r"><a href="#">Sign-up</a></li>
+      </ul>
     </nav>
   </header>
 
