--- a/www/index.html
+++ b/www/index.html
@@ -17,11 +17,11 @@
 
   <header class="masthead grid grid-middle">
     <div class="unit xs-1 s-1 m-1-2 l-1-4 text-center island-1-2">
-      <h1 class="push-0 mega">CSS Modules</h1>
+      <h1 class="push-0 mega"><a href="index.html">CSS Modules</a></h1>
     </div>
     <nav class="unit xs-1 s-1 m-1-2 l-3-4 island-1-2">
-      <ul class="list-group list-group--inline push-0">
-        <li class="push-r"><a href="#">Home</a></li>
+      <ul class="list-group list-group--inline push-0 pad-l-2">
+        <li class="push-r"><a href="index.html">Home</a></li>
         <li class="push-r"><a href="#">Tour</a></li>
         <li class="push-r"><a href="#">Pricing</a></li>
         <li class="push-r"><a href="#">Sign-up</a></li>
@@ -29,7 +29,8 @@
     </nav>
   </header>
 
-  <main>
+  <main class="grid">
+
   </main>
 
   <footer>
