--- a/www/index.html
+++ b/www/index.html
@@ -17,19 +17,46 @@
 
   <header class="masthead grid grid-middle">
     <div class="unit xs-1 s-1 m-1-2 l-1-4 text-center island-1-2">
-      <h1 class="push-0 mega"><a href="index.html">CSS Modules</a></h1>
+      <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
-    <nav class="unit xs-1 s-1 m-1-2 l-3-4 island-1-2">
-      <ul class="list-group list-group--inline push-0 pad-l-2">
+    <nav class="divider unit xs-1 s-1 m-1-2 l-2-4 island-1-2">
+      <ul class="list-group list-group--inline push-0">
         <li class="push-r"><a href="index.html">Home</a></li>
         <li class="push-r"><a href="#">Tour</a></li>
         <li class="push-r"><a href="#">Pricing</a></li>
         <li class="push-r"><a href="#">Sign-up</a></li>
       </ul>
     </nav>
+    <nav class="login unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
+      <ul class="list-group list-group--inline push-0 pad-r-2">
+        <li><a href="index.html">Login</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="hero-image hero-padding">
+        <h2 class="text-center hero-text pad-top-double">COLLABORATION. ANYWHERE.</h2>
+        <p class="text-center kilo pad-bottom-double">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+      <img class="" src="http://placehold.it/100x100">
+      <h3 class="pad-t push-0 giga title-colour">Customize</h3>
+      <p class="body-copy-colour micro">Customize your creative team</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+      <img class="" src="http://placehold.it/100x100">
+      <h3 class="pad-t push-0 giga title-colour">Manage</h3>
+      <p class="body-copy-colour micro">Manage your projects and media</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+      <img class="" src="http://placehold.it/100x100">
+      <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
+      <p class="body-copy-colour micro">View project analysis (metrics)</p>
+    </div>
 
   </main>
 
