--- a/www/index.html
+++ b/www/index.html
@@ -42,20 +42,28 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
       <img class="" src="http://placehold.it/100x100">
       <h3 class="pad-t push-0 giga title-colour">Customize</h3>
-      <p class="body-copy-colour micro">Customize your creative team</p>
+      <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
       <img class="" src="http://placehold.it/100x100">
       <h3 class="pad-t push-0 giga title-colour">Manage</h3>
-      <p class="body-copy-colour micro">Manage your projects and media</p>
+      <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 island-2 push-0 text-center">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
       <img class="" src="http://placehold.it/100x100">
       <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
-      <p class="body-copy-colour micro">View project analysis (metrics)</p>
+      <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-padding">
+      <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
+      <p class="body-copy-colour micro text-width-2">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
+      <div class="pad-t">
+        <a class="action-button" href="#">Buy Now</a>
+      </div>
     </div>
 
   </main>
