--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="hero-image hero-padding">
-        <h2 class="text-center hero-text pad-top-double">COLLABORATION. ANYWHERE.</h2>
-        <p class="text-center kilo pad-bottom-double">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+      <div class="hero-image hero-padding pad-top-double pad-bottom-double">
+        <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
+        <p class="text-center kilo">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
       </div>
     </div>
 
@@ -62,7 +62,7 @@
       <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
       <p class="body-copy-colour micro text-width-2">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
       <div class="pad-t">
-        <a class="action-button" href="#">Buy Now</a>
+        <a class="action-button" href="#">Take Tour</a>
       </div>
     </div>
 
