Homepage Large Screen Buckets Done

--- a/index.html
+++ b/index.html
@@ -60,9 +60,39 @@
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-padding">
       <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
-      <p class="body-copy-colour micro text-width-2">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
+      <p class="body-copy-colour micro text-width-3">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
       <div class="pad-t">
         <a class="action-button" href="#">Take Tour</a>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 v-images" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
+      <div class="body-copy-colour micro text-width-2 bucket-padding">
+        <h3>FREE</h3>
+        <p>For those still curious as to how StudioRoom will change your workflow. Give it a try!</p>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
+      <div class="body-copy-colour micro text-width-2 bucket-padding">
+        <h3>PRO</h3>
+        <p>For the active individual looking to collaberate like a pro! This is the package for you!</p>
+      </div>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 v-images" src="http://placehold.it/100x100">
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 v-images" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
+      <div class="body-copy-colour micro text-width-2 bucket-padding">
+        <h3>PLUS</h3>
+        <p>For the seasoned professional looking to maximize efficiancy & get the most out of StudioRoom!</p>
       </div>
     </div>
 
