--- a/index.html
+++ b/index.html
@@ -96,6 +96,39 @@
       </div>
     </div>
 
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-padding">
+      <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
+      <p class="body-copy-colour micro text-width-3">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
+      <div class="pad-t">
+        <a class="action-button" href="#">Sign Up</a>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Socials</h3>
+      <ul class="micro list-group">
+        <li>facebook</li>
+        <li>instagram</li>
+        <li>twitter</li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Contact</h3>
+      <ul class="micro list-group">
+        <li>m: hello@studioroom.com</li>
+        <li>p: 613-513-6541</li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Sitemap</h3>
+      <ul class="micro list-group">
+        <li>home</li>
+        <li>tour</li>
+        <li>pricing</li>
+        <li>sign up</li>
+      </ul>
+    </div>
+
   </main>
 
   <footer>
