--- a/index.html
+++ b/index.html
@@ -15,117 +15,127 @@
 
 <body>
 
-  <header class="masthead grid grid-middle">
-    <div class="unit xs-1 s-1 m-1-2 l-1-4 text-center island-1-2">
+  <header class="masthead grid grid-middle micro">
+    <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
-    <nav class="divider unit xs-1 s-1 m-1-2 l-2-4 island-1-2">
-      <ul class="list-group list-group--inline push-0">
-        <li class="push-r"><a href="index.html">Home</a></li>
-        <li class="push-r"><a href="#">Tour</a></li>
-        <li class="push-r"><a href="#">Pricing</a></li>
-        <li class="push-r"><a href="#">Sign-up</a></li>
-      </ul>
-    </nav>
-    <nav class="login unit xs-1 s-1 m-1-2 l-1-4 island-1-2">
-      <ul class="list-group list-group--inline push-0 pad-r-2">
-        <li><a href="index.html">Login</a></li>
-      </ul>
-    </nav>
+    <div class="unit xs-1 s-1 m-2-3 l-2-4 island-1-2 micro text-center">
+      <nav>
+        <ul class="list-group list-group--inline push-0">
+          <li class="push-r"><a href="index.html">Home</a></li>
+          <li class="push-r"><a href="www/tour.html">Tour</a></li>
+          <li class="push-r"><a href="www/pricing.html">Pricing</a></li>
+          <li class="push-r"><a href="www/signup.html">Sign-up</a></li>
+          <li><a href="www/signup.html">Login</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="hero-image hero-padding pad-top-double pad-bottom-double">
-        <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
-        <p class="text-center kilo">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+        <div class="text-width-2">
+          <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
+          <p class="text-center kilo">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+        </div>
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
-      <img class="" src="http://placehold.it/100x100">
-      <h3 class="pad-t push-0 giga title-colour">Customize</h3>
-      <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment">
+        <img class="" src="http://placehold.it/100x100">
+        <h3 class="pad-t push-0 giga title-colour">Customize</h3>
+        <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
+      </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
-      <img class="" src="http://placehold.it/100x100">
-      <h3 class="pad-t push-0 giga title-colour">Manage</h3>
-      <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment">
+        <img class="" src="http://placehold.it/100x100">
+        <h3 class="pad-t push-0 giga title-colour">Manage</h3>
+        <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
+      </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center">
-      <img class="" src="http://placehold.it/100x100">
-      <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
-      <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment">
+        <img class="" src="http://placehold.it/100x100">
+        <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
+        <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+      </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-padding">
-      <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
-      <p class="body-copy-colour micro text-width-3">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
-      <div class="pad-t">
-        <a class="action-button" href="#">Take Tour</a>
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
+        <p class="body-copy-colour micro">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
+        <div class="pad-t">
+          <a class="action-button" href="#">Take Tour</a>
+        </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 v-images" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
-      <div class="body-copy-colour micro text-width-2 bucket-padding">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>FREE</h3>
         <p>For those still curious as to how StudioRoom will change your workflow. Give it a try!</p>
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
-      <div class="body-copy-colour micro text-width-2 bucket-padding">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PRO</h3>
         <p>For the active individual looking to collaberate like a pro! This is the package for you!</p>
       </div>
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 v-images" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 v-images" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double">
-      <div class="body-copy-colour micro text-width-2 bucket-padding">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PLUS</h3>
         <p>For the seasoned professional looking to maximize efficiancy & get the most out of StudioRoom!</p>
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-padding">
-      <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
-      <p class="body-copy-colour micro text-width-3">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
-      <div class="pad-t">
-        <a class="action-button" href="#">Sign Up</a>
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
+        <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
+        <div class="pad-t">
+          <a class="action-button" href="#">Sign Up</a>
+        </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Socials</h3>
       <ul class="micro list-group">
-        <li>facebook</li>
-        <li>instagram</li>
-        <li>twitter</li>
+        <li><a href="#">facebook</a></li>
+        <li><a href="#">instagram</a></li>
+        <li><a href="#">twitter</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Contact</h3>
       <ul class="micro list-group">
-        <li>m: hello@studioroom.com</li>
-        <li>p: 613-513-6541</li>
+        <li><a href="#">hello@studioroom.ca</a></li>
+        <li><a href="#">645-876-0846</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Sitemap</h3>
       <ul class="micro list-group">
-        <li>home</li>
-        <li>tour</li>
-        <li>pricing</li>
-        <li>sign up</li>
+        <li><a href="#">home</a></li>
+        <li><a href="www/tour.html">tour</a></li>
+        <li><a href="www/pricing.html">pricing</a></li>
+        <li><a href="www/signup.html">sign up</a></li>
       </ul>
     </div>
 
