Added hero banner

--- a/www/tour.html
+++ b/www/tour.html
@@ -31,3 +31,13 @@
       </nav>
     </div>
   </header>
+
+  <main class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+        <div class="text-width-2">
+          <h2 class="text-center hero-text">TAKE THE TOUR</h2>
+          <p class="text-center kilo">Explore our incredible features designed to maximize productivity</p>
+        </div>
+      </div>
+    </div>
