Added buckets to tour page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <nav>
         <ul class="list-group list-group--inline push-0">
           <li class="push-r"><a href="index.html">Home</a></li>
-          <li class="push-r"><a href="www/tour.html">Tour</a></li>
-          <li class="push-r"><a href="www/pricing.html">Pricing</a></li>
-          <li class="push-r"><a href="www/signup.html">Sign-up</a></li>
+          <li class="push-r"><a href="tour.html">Tour</a></li>
+          <li class="push-r"><a href="pricing.html">Pricing</a></li>
+          <li class="push-r"><a href="signup.html">Sign-up</a></li>
           <li><a href="www/signup.html">Login</a></li>
         </ul>
       </nav>
@@ -133,9 +133,9 @@
       <h6 class="micro">Sitemap</h3>
       <ul class="micro list-group">
         <li><a href="#">home</a></li>
-        <li><a href="www/tour.html">tour</a></li>
-        <li><a href="www/pricing.html">pricing</a></li>
-        <li><a href="www/signup.html">sign up</a></li>
+        <li><a href="tour.html">tour</a></li>
+        <li><a href="pricing.html">pricing</a></li>
+        <li><a href="signup.html">sign up</a></li>
       </ul>
     </div>
 
