--- a/tour.html
+++ b/tour.html
@@ -71,3 +71,37 @@
         <p>Track the various statistics giving you key information about your project including duration, and team contribution.</p>
       </div>
     </div>
+
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">VIEW PRICING</h3>
+        <p class="body-copy-colour micro">Find out exactly how in-expensive all of our time saving features are. We offer different plans to suit different situations.</p>
+        <div class="pad-t">
+          <a class="action-button" href="#">See pricing</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Socials</h3>
+      <ul class="micro list-group">
+        <li><a href="#">facebook</a></li>
+        <li><a href="#">instagram</a></li>
+        <li><a href="#">twitter</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Contact</h3>
+      <ul class="micro list-group">
+        <li><a href="#">hello@studioroom.ca</a></li>
+        <li><a href="#">645-876-0846</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Sitemap</h3>
+      <ul class="micro list-group">
+        <li><a href="#">home</a></li>
+        <li><a href="tour.html">tour</a></li>
+        <li><a href="pricing.html">pricing</a></li>
+        <li><a href="signup.html">sign up</a></li>
+      </ul>
