--- a/pricing.html
+++ b/pricing.html
@@ -12,3 +12,22 @@
   <link href="css/main.css" rel="stylesheet">
   <title>StudioRoom - Effortless Collaboration</title>
 </head>
+
+<body>
+
+  <header class="masthead grid grid-middle micro">
+    <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
+      <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
+    </div>
+    <div class="unit xs-1 s-1 m-2-3 l-2-4 island-1-2 micro text-center">
+      <nav>
+        <ul class="list-group list-group--inline push-0">
+          <li class="push-r"><a href="index.html">Home</a></li>
+          <li class="push-r"><a href="tour.html">Tour</a></li>
+          <li class="push-r"><a href="pricing.html">Pricing</a></li>
+          <li class="push-r"><a href="signup.html">Sign-up</a></li>
+          <li><a href="www/signup.html">Login</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
