Added hero image to pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -31,3 +31,13 @@
       </nav>
     </div>
   </header>
+
+  <main class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+        <div class="text-width-2">
+          <h2 class="text-center hero-text">LOW PRICE. HIGH REWARD.</h2>
+          <p class="text-center kilo">Learn about our affordable pricing plans designed to work for any individual</p>
+        </div>
+      </div>
+    </div>
