Added buckets section to pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -41,3 +41,42 @@
         </div>
       </div>
     </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+        <h3>FREE</h3>
+        <ul>
+          <li>Limited to 5 project uploads</li>
+          <li>Collaborate with less experience professionals</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+        <h3>PRO - $9.99 per/month</h3>
+        <ul>
+          <li>Limited to 10 project uploads</li>
+          <li>Collaborate with registered designers who have minimal level experience</li>
+        </ul>
+      </div>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    </div>
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+        <h3>PLUS - $19.99 per/month</h3>
+        <ul>
+          <li>Unlimited project uploads</li>
+          <li>Collaborate with registered designers who have expert level experience</li>
+        </ul>
+      </div>
+    </div>
