Added info bucket to top of pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -42,6 +42,13 @@
       </div>
     </div>
 
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">TIGHT BUDGET? WE'VE GOT YOU!</h3>
+        <p class="body-copy-colour micro">We have different packages to accomodate different people in different situations</p>
+      </div>
+    </div>
+
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
       <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
