added sign up button to bottom of pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -87,3 +87,13 @@
         </ul>
       </div>
     </div>
+
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">SIGN UP NOW!</h3>
+        <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
+        <div class="pad-t">
+          <a class="action-button" href="#">Sign up</a>
+        </div>
+      </div>
+    </div>
