--- a/pricing.html
+++ b/pricing.html
@@ -97,3 +97,27 @@
         </div>
       </div>
     </div>
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Socials</h3>
+      <ul class="micro list-group">
+        <li><a href="#">facebook</a></li>
+        <li><a href="#">instagram</a></li>
+        <li><a href="#">twitter</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Contact</h3>
+      <ul class="micro list-group">
+        <li><a href="#">hello@studioroom.ca</a></li>
+        <li><a href="#">645-876-0846</a></li>
+      </ul>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
+      <h6 class="micro">Sitemap</h3>
+      <ul class="micro list-group">
+        <li><a href="#">home</a></li>
+        <li><a href="tour.html">tour</a></li>
+        <li><a href="pricing.html">pricing</a></li>
+        <li><a href="signup.html">sign up</a></li>
+      </ul>
