Added push and pull to all bucket boxes to make them reflow nicely

--- a/tour.html
+++ b/tour.html
@@ -51,15 +51,18 @@
         <p>Customize your creative team by creating new projects, adding team members, & managing your collaborators.</p>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>MANAGE</h3>
         <p>Easily manage your projects and media with our intuitive organization. Create, remove, and store projects with ease.</p>
       </div>
+      </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
-    </div>
+
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
       <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
