--- a/pricing.html
+++ b/pricing.html
@@ -62,7 +62,10 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
+      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PRO - $9.99 per/month</h3>
         <ul>
@@ -70,9 +73,6 @@
           <li>Collaborate with registered designers who have minimal level experience</li>
         </ul>
       </div>
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
