Added footer to signup.html

--- a/pricing.html
+++ b/pricing.html
@@ -120,3 +120,12 @@
         <li><a href="pricing.html">pricing</a></li>
         <li><a href="signup.html">sign up</a></li>
       </ul>
+    </div>
+
+  </main>
+
+  <footer>
+  </footer>
+
+</body>
+</html>
