--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <div class="unit x-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment">
         <img class="" src="http://placehold.it/100x100">
         <h3 class="pad-t push-0 giga title-colour">Customize</h3>
