--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-      <div class="vertical-alignment">
-        <img class="" src="http://placehold.it/100x100">
-        <h3 class="pad-t push-0 giga title-colour">Customize</h3>
-        <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+        <div class="vertical-alignment media">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <h3 class="pad-t push-0 giga title-colour">Customize</h3>
+          <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
+        </div>
       </div>
-    </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-      <div class="vertical-alignment">
-        <img class="" src="http://placehold.it/100x100">
-        <h3 class="pad-t push-0 giga title-colour">Manage</h3>
-        <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+        <div class="vertical-alignment media">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <h3 class="pad-t push-0 giga title-colour">Manage</h3>
+          <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
+        </div>
       </div>
-    </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-      <div class="vertical-alignment">
-        <img class="" src="http://placehold.it/100x100">
-        <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
-        <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+        <div class="vertical-alignment media">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
+          <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+        </div>
       </div>
-    </div>
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
