Added media tags to all non-background images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+      <div class="push-0 hero-image pad-top-double pad-bottom-double">
         <div class="text-width-2">
           <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
           <p class="text-center kilo">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
@@ -73,8 +73,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -83,8 +83,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -93,8 +93,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
