--- a/pricing.html
+++ b/pricing.html
@@ -33,7 +33,7 @@
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+      <div class="push-0 hero-image pad-top-double pad-bottom-double">
         <div class="text-width-2">
           <h2 class="text-center hero-text">LOW PRICE. HIGH REWARD.</h2>
           <p class="text-center kilo">Learn about our affordable pricing plans designed to work for any individual</p>
@@ -48,8 +48,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -61,8 +61,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -74,8 +74,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
