--- a/tour.html
+++ b/tour.html
@@ -33,7 +33,7 @@
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="push-0 hero-image hero-padding pad-top-double pad-bottom-double">
+      <div class="push-0 hero-image pad-top-double pad-bottom-double">
         <div class="text-width-2">
           <h2 class="text-center hero-text">TAKE THE TOUR</h2>
           <p class="text-center kilo">Explore our incredible features designed to maximize productivity</p>
@@ -41,8 +41,8 @@
       </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -52,7 +52,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -63,7 +63,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="push-0 vertical-alignment" src="http://placehold.it/100x100">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
