--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 
       <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
         <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
           <h3 class="pad-t push-0 giga title-colour">Customize</h3>
           <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
         <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
           <h3 class="pad-t push-0 giga title-colour">Manage</h3>
           <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
         <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100">
+          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
           <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
           <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
         </div>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -84,7 +84,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -94,7 +94,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100">
+      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -114,7 +114,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Socials</h3>
+      <h6 class="micro">Socials</h6>
       <ul class="micro list-group">
         <li><a href="#">facebook</a></li>
         <li><a href="#">instagram</a></li>
@@ -122,14 +122,14 @@
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Contact</h3>
+      <h6 class="micro">Contact</h6>
       <ul class="micro list-group">
         <li><a href="#">hello@studioroom.ca</a></li>
         <li><a href="#">645-876-0846</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Sitemap</h3>
+      <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
         <li><a href="#">home</a></li>
         <li><a href="tour.html">tour</a></li>
