--- a/tour.html
+++ b/tour.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -52,18 +52,17 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>MANAGE</h3>
         <p>Easily manage your projects and media with our intuitive organization. Create, remove, and store projects with ease.</p>
       </div>
-      </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100">
+      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -83,7 +82,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Socials</h3>
+      <h6 class="micro">Socials</h6>
       <ul class="micro list-group">
         <li><a href="#">facebook</a></li>
         <li><a href="#">instagram</a></li>
@@ -91,14 +90,14 @@
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Contact</h3>
+      <h6 class="micro">Contact</h6>
       <ul class="micro list-group">
         <li><a href="#">hello@studioroom.ca</a></li>
         <li><a href="#">645-876-0846</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Sitemap</h3>
+      <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
         <li><a href="#">home</a></li>
         <li><a href="tour.html">tour</a></li>
