Spell checked website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="push-0 hero-image pad-top-double pad-bottom-double">
         <div class="text-width-2">
           <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
-          <p class="text-center kilo">Excellerating progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+          <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PRO</h3>
-        <p>For the active individual looking to collaberate like a pro! This is the package for you!</p>
+        <p>For the active individual looking to collaborate like a pro! This is the package for you!</p>
       </div>
     </div>
 
@@ -99,7 +99,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PLUS</h3>
-        <p>For the seasoned professional looking to maximize efficiancy & get the most out of StudioRoom!</p>
+        <p>For the seasoned professional looking to maximize efficiency & get the most out of StudioRoom!</p>
       </div>
     </div>
 
