--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,8 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/colour.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>StudioRoom - Effortless Collaboration</title>
 </head>
 
