Added New Colour To All Pages

--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
       <div class="push-0 hero-image pad-top-double pad-bottom-double">
-        <div class="text-width-2">
+        <div class="text-width-2 text-center">
           <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
           <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+          <a class="action-button" href="signup.html">Sign Up</a>
         </div>
       </div>
     </div>
@@ -72,7 +73,7 @@
         <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
         <p class="body-copy-colour micro">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
         <div class="pad-t">
-          <a class="action-button" href="#">Take Tour</a>
+          <a class="action-button" href="tour.html">Take Tour</a>
         </div>
       </div>
     </div>
@@ -80,7 +81,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
       <img class="push-0 vertical-alignment media__img no-print" src="images/free-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple ">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple">
       <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
         <h3>FREE</h3>
         <p>For those still curious as to how StudioRoom will change your workflow. Give it a try!</p>
@@ -135,7 +136,7 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="tour.html">tour</a></li>
         <li><a href="pricing.html">pricing</a></li>
         <li><a href="signup.html">sign up</a></li>
