--- a/pricing.html
+++ b/pricing.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro">
+  <header class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
@@ -35,25 +35,26 @@
 
   <main class="grid">
     <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="push-0 hero-image pad-top-double pad-bottom-double">
-        <div class="text-width-2">
-          <h2 class="text-center hero-text">LOW PRICE. HIGH REWARD.</h2>
+      <div class="push-0 hero-image-3 pad-top-double pad-bottom-double">
+        <div class="text-width-2 text-center">
+          <h2 class="text-center hero-text">PRICING</h2>
           <p class="text-center kilo">Learn about our affordable pricing plans designed to work for any individual</p>
+          <a class="action-button" href="signup.html">Sign Up</a>
         </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
-      <div class="vertical-alignment text-width-2">
+      <div class="vertical-alignment text-width-2 text-center">
         <h3 class="push-0 giga title-colour pad-b">TIGHT BUDGET? WE'VE GOT YOU!</h3>
         <p class="body-copy-colour micro">We have different packages to accomodate different people in different situations</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/free-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>FREE</h3>
         <ul>
@@ -64,9 +65,9 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/pro-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PRO - $9.99 per/month</h3>
         <ul>
@@ -77,9 +78,9 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/plus-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>PLUS - $19.99 per/month</h3>
         <ul>
@@ -94,7 +95,7 @@
         <h3 class="push-0 giga title-colour pad-b">SIGN UP NOW!</h3>
         <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
         <div class="pad-t">
-          <a class="action-button" href="#">Sign up</a>
+          <a class="action-button" href="signup.html">Sign up</a>
         </div>
       </div>
     </div>
@@ -117,7 +118,7 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="tour.html">tour</a></li>
         <li><a href="pricing.html">pricing</a></li>
         <li><a href="signup.html">sign up</a></li>
