--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro">
+  <header class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
@@ -53,7 +53,7 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="tour.html">tour</a></li>
         <li><a href="pricing.html">pricing</a></li>
         <li><a href="signup.html">sign up</a></li>
