--- a/tour.html
+++ b/tour.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro">
+  <header class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
@@ -33,20 +33,31 @@
     </div>
   </header>
 
-  <main class="grid">
-    <div class="unit xs-1 s-1 m-1 l-1">
-      <div class="push-0 hero-image pad-top-double pad-bottom-double">
-        <div class="text-width-2">
-          <h2 class="text-center hero-text">TAKE THE TOUR</h2>
-          <p class="text-center kilo">Explore our incredible features designed to maximize productivity</p>
+    <main class="grid">
+      <div class="unit xs-1 s-1 m-1 l-1">
+        <div class="push-0 hero-image-2 pad-top-double pad-bottom-double">
+          <div class="text-width-2 text-center">
+            <h2 class="text-center hero-text">TOUR</h2>
+            <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+            <a class="action-button" href="signup.html">Sign Up</a>
+          </div>
+        </div>
+      </div>
+
+    <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
+      <div class="vertical-alignment text-width-2">
+        <h3 class="push-0 giga title-colour pad-b">VIEW PRICING</h3>
+        <p class="body-copy-colour micro">Find out exactly how in-expensive all of our time saving features are. We offer different plans to suit different situations.</p>
+        <div class="pad-t">
+          <a class="action-button" href="pricing.html">See pricing</a>
         </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/customize-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>CUSTOMIZE</h3>
         <p>Customize your creative team by creating new projects, adding team members, & managing your collaborators.</p>
@@ -54,9 +65,9 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/manage-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>MANAGE</h3>
         <p>Easily manage your projects and media with our intuitive organization. Create, remove, and store projects with ease.</p>
@@ -64,9 +75,9 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="http://placehold.it/100x100" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/analyze-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
         <h3>ANALYZE</h3>
         <p>Track the various statistics giving you key information about your project including duration, and team contribution.</p>
@@ -75,10 +86,10 @@
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
-        <h3 class="push-0 giga title-colour pad-b">VIEW PRICING</h3>
-        <p class="body-copy-colour micro">Find out exactly how in-expensive all of our time saving features are. We offer different plans to suit different situations.</p>
+        <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
+        <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
         <div class="pad-t">
-          <a class="action-button" href="#">See pricing</a>
+          <a class="action-button" href="signup.html">Sign Up</a>
         </div>
       </div>
     </div>
@@ -101,7 +112,7 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Sitemap</h6>
       <ul class="micro list-group">
-        <li><a href="#">home</a></li>
+        <li><a href="index.html">home</a></li>
         <li><a href="tour.html">tour</a></li>
         <li><a href="pricing.html">pricing</a></li>
         <li><a href="signup.html">sign up</a></li>
