--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro background-purple nav-font">
+  <ul class="skip-links">
+    <li><a href="#nav">Skip to navigation</a></li>
+    <li><a href="#main">Skip to main content</a></li>
+  </ul>
+
+  <header role="banner" class="masthead grid grid-middle micro background-purple nav-font">
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+    <div id="bottom"></div>
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
     <div class="unit xs-1 s-1 m-2-3 l-2-4 island-1-2 micro text-center">
-      <nav>
+      <nav role="navigation" id="nav">
         <ul class="list-group list-group--inline push-0">
           <li class="push-r"><a href="index.html">Home</a></li>
           <li class="push-r"><a href="tour.html">Tour</a></li>
@@ -35,51 +44,51 @@
     </div>
   </header>
 
-  <main class="grid">
+  <main role="main" class="grid" id="main">
     <div class="unit xs-1 s-1 m-1 l-1">
       <div class="push-0 hero-image pad-top-double pad-bottom-double">
         <div class="text-width-2 text-center">
           <h2 class="text-center hero-text">COLLABORATION. ANYWHERE.</h2>
           <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
-          <a class="action-button" href="signup.html">Sign Up</a>
+          <a class="action-button" href="pricing.html" aria-label="View StudioRoom pricing options">View Pricing</a>
         </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="images/customize-icon.png" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/customize-icon.png" alt="Customization icon">
         <h3 class="pad-t push-0 giga title-colour">Customize</h3>
-        <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
+        <p class="text-width-1 micro">Customize your creative team</p>
       </div>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="images/manage-icon.png" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/manage-icon.png" alt="Management icon">
         <h3 class="pad-t push-0 giga title-colour">Manage</h3>
-        <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
+        <p class="text-width-1 micro">Manage your projects and media</p>
       </div>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="images/analyze-icon.png" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/analyze-icon.png" alt="Analyze icon">
         <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
-        <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
+        <p class="text-width-1 micro">View project analysis (metrics)</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
         <h3 class="push-0 giga title-colour pad-b">Take The Tour</h3>
-        <p class="body-copy-colour micro">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
+        <p class="micro">Find out exactly what you’re getting when you sign up for StudioRoom. We offer a wide variety of tools to make your work life smoother!</p>
         <div class="pad-t">
-          <a class="action-button" href="tour.html">Take Tour</a>
+          <a class="action-button" href="tour.html" aria-label="Take the tour to find out more about StudioRoom">Take Tour</a>
         </div>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="images/free-icon.png" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/free-icon.png" alt="Free membership icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple">
       <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
@@ -89,7 +98,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="images/pro-icon.png" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/pro-icon.png" alt="Pro membership icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 center island-double bucket-box background-purple">
       <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
@@ -99,7 +108,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="images/plus-icon.png" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/plus-icon.png" alt="Plus membership icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple">
       <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
@@ -111,9 +120,9 @@
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
         <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
-        <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
+        <p class="micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
         <div class="pad-t">
-          <a class="action-button" href="#">Sign Up</a>
+          <a class="action-button" href="signup.html" aria-label="Signup for StudioRoom">Sign Up</a>
         </div>
       </div>
     </div>
@@ -121,16 +130,18 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Socials</h6>
       <ul class="micro list-group">
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">instagram</a></li>
-        <li><a href="#">twitter</a></li>
+        <li><a href="https://www.facebook.com/ryannickpurdy">facebook</a></li>
+        <li><a href="https://www.instagram.com/ryannickpurdy/">instagram</a></li>
+        <li><a href="https://twitter.com/RyanNickPurdy">twitter</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Contact</h6>
-      <ul class="micro list-group">
-        <li><a href="#">hello@studioroom.ca</a></li>
-        <li><a href="#">645-876-0846</a></li>
+      <ul class="micro list-group" role="contentinfo">
+        <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
+        <li><a href="tel:415-465-5985">415-465-5985</a></li>
+        <li>© Copyrihgt SAAS</li>
+        <li><a href="#nav">Back to top</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
