--- a/signup.html
+++ b/signup.html
@@ -17,12 +17,17 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro background-purple nav-font">
+  <ul class="skip-links">
+    <li><a href="#nav">Skip to navigation</a></li>
+    <li><a href="#main">Skip to main content</a></li>
+  </ul>
+
+  <header role="banner" class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
     <div class="unit xs-1 s-1 m-2-3 l-2-4 island-1-2 micro text-center">
-      <nav>
+      <nav role="navigation" id="nav">
         <ul class="list-group list-group--inline push-0">
           <li class="push-r"><a href="index.html">Home</a></li>
           <li class="push-r"><a href="tour.html">Tour</a></li>
@@ -33,21 +38,22 @@
     </div>
   </header>
 
-  <main class="grid">
-
+  <main role="main" class="grid" id="main">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Socials</h6>
       <ul class="micro list-group">
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">instagram</a></li>
-        <li><a href="#">twitter</a></li>
+        <li><a href="https://www.facebook.com/ryannickpurdy">facebook</a></li>
+        <li><a href="https://www.instagram.com/ryannickpurdy/">instagram</a></li>
+        <li><a href="https://twitter.com/RyanNickPurdy">twitter</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Contact</h6>
-      <ul class="micro list-group">
-        <li><a href="#">hello@studioroom.ca</a></li>
-        <li><a href="#">645-876-0846</a></li>
+      <ul class="micro list-group" role="contentinfo">
+        <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
+        <li><a href="tel:415-465-5985">415-465-5985</a></li>
+        <li>© Copyrihgt SAAS</li>
+        <li><a href="#nav">Back to top</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
