--- a/tour.html
+++ b/tour.html
@@ -17,12 +17,17 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro background-purple nav-font">
+  <ul class="skip-links">
+    <li><a href="#nav">Skip to navigation</a></li>
+    <li><a href="#main">Skip to main content</a></li>
+  </ul>
+
+  <header role="banner" class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
     <div class="unit xs-1 s-1 m-2-3 l-2-4 island-1-2 micro text-center">
-      <nav>
+      <nav role="navigation" id="nav">
         <ul class="list-group list-group--inline push-0">
           <li class="push-r"><a href="index.html">Home</a></li>
           <li class="push-r"><a href="tour.html">Tour</a></li>
@@ -33,52 +38,49 @@
     </div>
   </header>
 
-    <main class="grid">
-      <div class="unit xs-1 s-1 m-1 l-1">
-        <div class="push-0 hero-image-2 pad-top-double pad-bottom-double">
-          <div class="text-width-2 text-center">
-            <h2 class="text-center hero-text">TOUR</h2>
-            <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
-            <a class="action-button" href="signup.html">Sign Up</a>
-          </div>
+  <main role="main" class="grid" id="main">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="push-0 hero-image-2 pad-top-double pad-bottom-double">
+        <div class="text-width-2 text-center">
+          <h2 class="text-center hero-text">TOUR</h2>
+          <p class="text-center kilo">Accelerating Progress. Maximizing Efficiency. Enhacing Your Creativity.</p>
+          <a class="action-button" href="signup.html" aria-label="Signup for StudioRoom">Sign Up</a>
         </div>
       </div>
+    </div>
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
-      <div class="vertical-alignment text-width-2">
-        <h3 class="push-0 giga title-colour pad-b">VIEW PRICING</h3>
-        <p class="body-copy-colour micro">Find out exactly how in-expensive all of our time saving features are. We offer different plans to suit different situations.</p>
-        <div class="pad-t">
-          <a class="action-button" href="pricing.html">See pricing</a>
-        </div>
+      <div class="vertical-alignment text-width-2 text-center">
+        <h3 class="push-0 giga title-colour pad-b">TIGHT BUDGET? WE'VE GOT YOU!</h3>
+        <p class="micro">We have different packages to accomodate different people in different situations</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="media__img push-0 vertical-alignment" src="images/customize-icon.png" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/customize-icon.png" alt="Customize icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+      <div class="text-colour-white micro text-width-2 bucket-padding vertical-alignment">
         <h3>CUSTOMIZE</h3>
         <p>Customize your creative team by creating new projects, adding team members, & managing your collaborators.</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="images/manage-icon.png" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/manage-icon.png" alt="Management icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+      <div class="text-colour-white micro text-width-2 bucket-padding vertical-alignment">
         <h3>MANAGE</h3>
         <p>Easily manage your projects and media with our intuitive organization. Create, remove, and store projects with ease.</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box">
-      <img class="media__img push-0 vertical-alignment" src="images/analyze-icon.png" alt="image">
+      <img class="media__img push-0 vertical-alignment" src="images/analyze-icon.png" alt="Analyze icon">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box background-purple">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+      <div class="text-colour-white micro text-width-2 bucket-padding vertical-alignment">
         <h3>ANALYZE</h3>
         <p>Track the various statistics giving you key information about your project including duration, and team contribution.</p>
       </div>
@@ -86,10 +88,10 @@
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
-        <h3 class="push-0 giga title-colour pad-b">Sign Up Now!</h3>
-        <p class="body-copy-colour micro">Ready to start your first project in StudioRoom? Click the button below to choose your package and sign up!</p>
+        <h3 class="push-0 giga title-colour pad-b">VIEW PRICING</h3>
+        <p class="micro">Find out exactly how in-expensive all of our time saving features are. We offer different plans to suit different situations.</p>
         <div class="pad-t">
-          <a class="action-button" href="signup.html">Sign Up</a>
+          <a class="action-button" href="pricing.html" aria-label="See StudioRoom pricing options">See pricing</a>
         </div>
       </div>
     </div>
@@ -97,16 +99,18 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Socials</h6>
       <ul class="micro list-group">
-        <li><a href="#">facebook</a></li>
-        <li><a href="#">instagram</a></li>
-        <li><a href="#">twitter</a></li>
+        <li><a href="https://www.facebook.com/ryannickpurdy">facebook</a></li>
+        <li><a href="https://www.instagram.com/ryannickpurdy/">instagram</a></li>
+        <li><a href="https://twitter.com/RyanNickPurdy">twitter</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h6 class="micro">Contact</h6>
-      <ul class="micro list-group">
-        <li><a href="#">hello@studioroom.ca</a></li>
-        <li><a href="#">645-876-0846</a></li>
+      <ul class="micro list-group" role="contentinfo">
+        <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
+        <li><a href="tel:415-465-5985">415-465-5985</a></li>
+        <li>© Copyrihgt SAAS</li>
+        <li><a href="#nav">Back to top</a></li>
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
