--- a/tour.html
+++ b/tour.html
@@ -51,8 +51,8 @@
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2 text-center">
-        <h3 class="push-0 giga title-colour pad-b">TIGHT BUDGET? WE'VE GOT YOU!</h3>
-        <p class="micro">We have different packages to accomodate different people in different situations</p>
+        <h3 class="push-0 giga title-colour pad-b">TAKE A LOOK AT ALL OF OUR GREAT FEATURES!</h3>
+        <p class="micro">We have everything any creative individual would need in their arsenal</p>
       </div>
     </div>
 
