--- a/signup.html
+++ b/signup.html
@@ -39,6 +39,80 @@
   </header>
 
   <main role="main" class="grid" id="main">
+
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <label for="name">Name</label>
+          <input id="name" name="name" required placeholder="first & last name">
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" required placeholder="youremail@email.com">
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <label for="password">Password</label>
+          <input id="password" name="password" required placeholder="password">
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-1 l-1-1 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <label for="subject">Subject</label>
+          <select id="subject" name="_subject">
+            <option>Option 1</option>
+            <option>Option 2</option>
+            <option>Option 3</option>
+          </select>
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-1 l-1-1 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <fieldset>
+            <legend>How are you feeling</legend>
+            <input id="happy" name="happy" type="radio" name="feels">
+            <label for="happy">happy</label>
+
+            <input id="happy" type="radio" name="feels">
+            <label for="happy">happy</label>
+
+            <input id="happy" type="radio" name="feels">
+            <label for="happy">happy</label>
+
+            <input id="happy" type="radio" name="feels">
+            <label for="happy">happy</label>
+
+            <input id="happy" type="radio" name="feels">
+            <label for="happy">happy</label>
+          </fieldset>
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-1 l-1-1 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <div>
+          <label for="message">message</label>
+          <textarea id="message" name="message"></textarea>
+        </div>
+      </form>
+    </div>
+    <div class="unit xs-1 s-1 m-1-1 l-1-1 text-center pad-t-2 pad-b-2">
+      <form action="https://formspree.io/ryan.nicholas.purdy@gmail.com" method="post">
+        <button type="submit">Send!</button>
+      </form>
+    </div>
+
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h4 class="micro">Socials</h4>
       <ul class="micro list-group">
