--- a/signup.html
+++ b/signup.html
@@ -86,6 +86,7 @@
           <textarea id="message" name="message"></textarea>
         </div>
         <button type="submit">Send!</button>
+        <input type="hidden" name="_next" value="http://ryannicholaspurdy.github.io/dsn1675-saas-website/index.html">
       </form>
     </div>
 
