added link to thank you page

--- a/signup.html
+++ b/signup.html
@@ -84,7 +84,7 @@
           </div>
           <div class="pad-t pad-b-2">
             <button class="background-white" type="submit"><strong>SUBMIT</strong></button>
-            <input type="hidden" name="_next" value="thankyou.html">
+            <input type="hidden" name="_next" value="http://ryannicholaspurdy.github.io/dsn1675-saas-website/thankyou.html">
           </div>
         </div>
       </form>
